tests/ui/core_checkpoint_kind_reintroduction.stderr
error[E0432]: unresolved imports `hibana::integration::cap::advanced::CheckpointKind`, `hibana::integration::cap::advanced::CommitKind`, `hibana::integration::cap::advanced::RollbackKind`
 --> tests/ui/core_checkpoint_kind_reintroduction.rs:1:42
  |
1 | use hibana::integration::cap::advanced::{CheckpointKind, CommitKind, RollbackKind};
  |                                          ^^^^^^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^^^^^^ no `RollbackKind` in `integration::cap::advanced`
  |                                          |               |
  |                                          |               no `CommitKind` in `integration::cap::advanced`
  |                                          no `CheckpointKind` in `integration::cap::advanced`
